syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/uxsnap/pkg/chat_v1;chat_v1";

service ChatV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

enum Role {
  USER = 0;
  ADMIN = 1;
}

message CreateRequest {
  repeated string usernames = 1;
}

message CreateResponse {
  int64 id = 1;
}

message DeleteRequest {
  int64 id = 1;
}

message SendMessageRequest {
  string from = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;

}